--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,8 +10,10 @@ integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriV
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    {{{body}}}
-
+    <div class="container">
+{{{body}}}
+    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
             
 </body>
