--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,10 @@
-<h1>Login</h1>
+<h2><i class="fas fa-book-reader"> Story-Book</i></h2>
+<div class="section">
+    <p class="lead">Create Public or Private stories</p>
+</div>
+<div class="divider">
+</div>
+<div class="section">
+    <a href="/auth/google" class="btn blue darken-1">
+    <i class="fab fa-google left"></i> Log in with google</a>
+</div>
