--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,6 +11,7 @@ integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriV
 </head>
 <body>
     {{> _header}}
+    {{> _add_btn}}
     <div class="container">
 {{{body}}}
     </div>
