--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,6 +1,6 @@
-<nav class="grey darken-3">
+<nav class="blue darken-2">
     <div class="nav-wrapper container">
-        <a href="#!" class="brand-logo center">StoryBooks</a>
+        <a href="/dashboard" class="brand-logo center">Story-Book</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large">
             <i class="fas fa-bars"></i>
         </a>
