--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,7 +1,7 @@
 <h6>Dashboard</h6>
 <h3>Welcome {{name}}</h3>
 <p>Your Stories</p>
-{{#if Stories}}
+{{#if stories}}
 <table class="striped">
     <thead>
         <tr>
