--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,8 +17,12 @@ integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriV
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.15.0/ckeditor.js" integrity="sha512-bNMnTgKRxN1n+5rgfcf160HT2koHRcwLcSq/3JDOY9R65mja48E4Hh+a+IQXVaY2NoJCVC+pr0qE3Vz194QwnA==" 
+    crossorigin="anonymous"></script>
             <script>
                 M.Sidenav.init(document.querySelector('.sidenav'))
+                M.FormSelect.init(document.querySelector('#status'))
+                CKEDITOR.replace('body',{plugins:'wysiwygarea,toolbar,basicstyles,link'})
             </script>
 </body>
 </html>
