Add single user Route and View

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-<h2><i class="fas fa-book-reader"> Story-Book</i></h2>
+<h2><i class="fas fa-book-open"> Story-Book</i></h2>
 <div class="section">
     <p class="lead">Create Public or Private stories</p>
 </div>
